I do have a Twitter account…

--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ github:
   username: Tamschi             # change to your github username
 
 twitter:
-  username: ''            # change to your twitter username
+  username: 'tammeschichler'            # change to your twitter username
 
 social:
   # Change to your full name.
