--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,7 @@ title: Abstraction Haven                          # the main title
 tagline: Mostly Rust, sometimes mainly carbohydrates.   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, portfolio, sidebar,
-  bootstrap Jekyll theme with responsive web design
-  and focuses on text presentation.
+  Mostly Rust, sometimes mainly carbohydrates.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://blog.schichler.dev'
