--- a/.gitattributes
+++ b/.gitattributes
@@ -11,6 +11,9 @@
 *.{bat,[bB][aA][tT]} text eol=crlf
 
 # Denote all files that are truly binary and should not be modified.
+*.woff{,2} binary
+*.ttf binary
 *.png binary
 *.jpg binary
 *.ico binary
+*.eot binary
