--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,29 +1,41 @@
 #  The contact options.
-
+-
+  type: ko-fi
+  icon: 'fas fa-coffee'   # icons powered by <https://fontawesome.com/>
+  url:  'https://ko-fi.com/tamme/'
+-
+  type: itch.io
+  icon: 'fab fa-itch-io'   # icons powered by <https://fontawesome.com/>
+  url:  'https://tamschi.itch.io/'
 -
   type: github
   icon: 'fab fa-github'
 -
-  type: twitter
-  icon: 'fab fa-twitter'
+  type: rss
+  icon: 'fas fa-rss'
+  noblank: true
 -
   type: email
   icon: 'fas fa-envelope'
   noblank: true            # open link in current tab
 -
-  type: rss
-  icon: 'fas fa-rss'
+  type: xmpp
+  icon: 'fas fa-comment-dots'
+  url: xmpp:tamme@schichler.dev
   noblank: true
-
-# Uncomment and complete the url below to enable more contact options
-# -
-#   type: mastodon
-#   icon: 'fab fa-mastodon'   # icons powered by <https://fontawesome.com/>
-#   url:  ''                  # Fill with your mastodon account page
+-
+  type: mastodon
+  icon: 'fab fa-mastodon'   # icons powered by <https://fontawesome.com/>
+  url:  'https://hmm.schichler.dev/web/@Tamme'                  
+-
+  type: twitter
+  icon: 'fab fa-twitter'
 # -
 #   type: linkedin
 #   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
-#   url:  ''                  # Fill with your Linkedin homepage
+#   url:  'https://www.linkedin.com/in/tammeschichler/'                  # Fill with your Linkedin homepage
+
+# Uncomment and complete the url below to enable more contact options# Fill with your mastodon account page
 # -
 #   type: stack-overflow
 #   icon: 'fab fa-stack-overflow'
