--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -15,6 +15,8 @@
   icon: 'fas fa-rss'
   noblank: true
 -
+  type: br
+-
   type: email
   icon: 'fas fa-envelope'
   noblank: true            # open link in current tab
