--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -26,7 +26,7 @@
 -
   type: mastodon
   icon: 'fab fa-mastodon'   # icons powered by <https://fontawesome.com/>
-  url:  'https://hmm.schichler.dev/web/@Tamme'                  
+  url:  'https://nerdculture.de/@Tamschi'
 -
   type: twitter
   icon: 'fab fa-twitter'
